# clean-architecture

./: clean-architecture.code-workspace  pyproject.toml
clean-architecture/: main.py
clean-architecture/current_approach/: router.py
clean-architecture/current_approach/services/: __init__.py  a.py  b.py  c.py
clean-architecture/current_approach/use_cases/: __init__.py  call_b.py  call_c.py
clean-architecture/new_approach/: router.py
clean-architecture/new_approach/depends/: services.py
clean-architecture/new_approach/di/: use_cases.py
clean-architecture/new_approach/services/: __init__.py  a.py  b.py  c.py
clean-architecture/new_approach/use_cases/: __init__.py  call_b.py  call_c.py
